--- a/config.json
+++ b/config.json
@@ -1,9 +1,12 @@
 {
     "threshold": 90,
     "kill": "tskill ethminer",
-    "path": "mine.bat",
+    "path": ".\\bin\\ethminer --farm-recheck 2000 -U -S eth-us-east1.nanopool.org:9999 -SP 1 -O wallet.name/email --cuda-parallel-hash 4",
     "reboot": "shutdown -r -t 00",
-    "restartApp": 120,
+    "restartApp": 60,
     "rebootRig": 360,
-    "cmd": "nvidia-smi --query-gpu=utilization.gpu --format=csv,noheader"
+    "core": 200,
+    "mem": 450,
+    "power": 78,
+    "p0": true
 }
