--- a/config.json
+++ b/config.json
@@ -5,8 +5,8 @@
     "reboot": "shutdown -r -t 00",
     "restartApp": 60,
     "rebootRig": 360,
-    "core": 200,
-    "mem": 450,
-    "power": 78,
-    "p0": true
+    "core": 0,
+    "mem": 0,
+    "power": 120,
+    "p0": false
 }
