--- a/config.json
+++ b/config.json
@@ -1,18 +1,14 @@
 {
-    "threshold": 90,
-    "kill": "tskill ethminer",
     "miners": {
         "ETH": "\\bin\\ethminer --farm-recheck 2000 -U -S eth-us-east1.nanopool.org:9999 -SP 1 -O wallet.name/email --cuda-parallel-hash 4",
         "ETC": "\\bin\\ethminer --farm-recheck 2000 -U -S etc-us-east1.nanopool.org:19999 -SP 1 -O wallet.name/email --cuda-parallel-hash 4",
         "UBQ": "\\bin\\ethminer --farm-recheck 2000 -U -S us.ubiqpool.io:8008 -SP 1 -O wallet.name/email --cuda-parallel-hash 4"
     },
     "reboot": "shutdown -r -t 00",
-    "restartApp": 60,
     "rebootRig": 360,
     "profitTime": 300,
-    "cycleTime": 1,
-    "core": false,
-    "mem": false,
-    "power": false,
-    "pstate": false
+    "core": 10,
+    "mem": 10,
+    "power": 100,
+    "pstate": true
 }
